# cicd

./: README.md
gitlab-docker-compose/: .gitlab-ci.yml  Dockerfile  deploy.sh  docker-compose.yml
helm-chart-multi-pipeline/: .gitignore  .gitlab-ci.yml  README.md
helm-chart-multi-pipeline/charts/my-other-chart/: values.yaml
helm-chart-multi-pipeline/gci-templates/: .gitlab-ci.yml
helm-chart-multi-pipeline/scripts/: generate-pipeline.sh
python-and-tag-creation/: .gitlab-ci.yml
python-uv-full-project/: .dockerignore  .gitlab-ci-local-variables.yml  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  OIDC.md  README.md  junit.xml  pyproject.toml  pyproject_truncated_fix.txt
python-uv-full-project/tests/: test_smoke.py
terraform-env-from-branch/: .gitlab-ci.yml  README.txt
terraform-makefile-precommit/: .gitignore  .secrets.baseline  README.md  makefile
terraform-makefile-precommit/terraform/: outputs.tf  providers.tf  variables.tf
terraform-makefile-precommit/terraform/tests/: basic.tftest.hcl  go.mod
terraform-multi-env-duplicate-per-env/: .gitlab-ci.yml  CODEOWNERS  README.md  helper.yml
terraform-multi-env-duplicate-per-env/dev/: .gitlab-ci.yml  README.md  bucket.tf  variables.tf
terraform-multi-env-duplicate-per-env/production/: .gitlab-ci.yml  README.md  variables.tf
terraform-multi-env-duplicate-per-env/staging/: .gitlab-ci.yml  README.md  bucket.tf  variables.tf
terraform-short-with-tf-cli-vars/: .gitlab-ci.yml
terragrunt-multi-env/: .gitlab-ci.yml  terragrunt.hcl
terragrunt-multi-env/envs/dev/: terragrunt.hcl
(+12 files in other folders)
