[project]
name = "demo-uv-fastapi"
version = "0.2.0"
requires-python = ">=3.12"

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "bandit>=1.7",
  "pip-audit>=2",
]

[tool.ruff]
line-length = 100

[tool.bandit]
targets = ["."
