[project]
name = "demo-uv-fastapi"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0"
]


[tool.ruff]
line-length = 100

[tool.bandit]
targets = ["."]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "gitlabci-local>=13.0.1",
    "httpx>=0.28.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]
